<resources>
  <string name="app_name">ExecuteMyTrip</string>
  <string name="loading">Loading...</string>
  <string name="internet_msg_1">No Internet Connection</string>
  <string name="internet_msg_2">Please connect to the internet</string>Ok
  <string name="ok">OK</string>
  <string name="something_went_wrong">Something went wrong!!!</string>


  <!--Font used in app-->
  <string name="font_light">light</string>
  <string name="font_medium">medium</string>
  <string name="font_bold">bold</string>
  <string name="font_regular">regular</string>


  <!--Splash Screen-->
  <string name="powered_by">powered by Bad Boys</string>
  <string name="title_activity_home">HomeActivity</string>

  <!--Navigation Drawer -->
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="menu_execute_a_plan">Execute a Plan</string>
  <string name="menu_my_plan">My Plan</string>
  <string name="menu_promo">Execute Smile :)</string>

  <!--Home Screen -->
  <string name="source">Source</string>
  <string name="destination">Destination</string>

  <!--PromoCode Screen-->
  <string name="promocode_msg_1">Click to save the code</string>
  <string name="promocode_msg_2">Copied to clipboard!!!</string>
  <string name="promocode_no_available_1">Right now no promo code is available.</string>
  <string name="promocode_no_available_2">Please try later.</string>

  <!--Layout Route -->
  <string name="feature">Cheapest</string>
  <string name="time">Time : </string>
  <string name="price">Price :</string>
  <string name="waytogo">Way to Go</string>
  <string name="route_plan_a_trip">Please plan a trip.</string>



  <!--Detail Screen -->
  <string name="detail_promoCode_hint">Promo code</string>
  <string name="detail_let_execute_plan">Let Execute Plan</string>
  <string name="detail_fastest_carrier">Fastest Carrier : </string>
  <string name="detail_Possible_carrier">Possible Carrier: </string>
  <string name="detail_minimum_price">Minimum Price: </string>
  <string name="detail_minimum_time">Minimum Time: </string>
  <string name="detail_distance">Distance: </string>
  <string name="detail_fastest_carrier_duration">Fastest Carrier Duration: </string>
  <string name="detail_root_details">Route Details</string>
  <string name="detail_apply_promo">Apply Promo</string>
  <string name="detail_promo_code_applied_successfully">Promo Code applied successfully</string>
  <string name="detail_promo_code_applied_failure">Invalid Promo Code!!!</string>

</resources>
