<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_executePlan"
            android:title="@string/menu_execute_a_plan" />
        <item
            android:id="@+id/nav_myPlan"
            android:title="@string/menu_my_plan" />
        <item
            android:id="@+id/nav_promoGiftCode"
            android:title="@string/menu_promo" />
    </group>

   <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
