<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  card_view:cardBackgroundColor="@android:color/white"
  card_view:cardElevation="5dp"
  card_view:cardUseCompatPadding="true">


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="5dp">

        <com.bb.executemytrip.customview.EmtTextView
          android:id="@+id/tv_time_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:text="@string/time"/>

        <com.bb.executemytrip.customview.EmtTextView
          android:id="@+id/tv_time_value"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="5dp"
          android:layout_toRightOf="@id/tv_time_label"
          android:textColor="@color/black"
          android:textStyle="bold"/>

        <com.bb.executemytrip.customview.EmtTextView
          android:id="@+id/tv_price_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/tv_time_label"
          android:text="@string/price"/>

        <com.bb.executemytrip.customview.EmtTextView
          android:id="@+id/tv_price_value"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/tv_time_label"
          android:layout_marginBottom="5dp"
          android:layout_marginLeft="5dp"
          android:layout_toRightOf="@id/tv_price_label"
          android:textColor="@color/black"
          android:textStyle="bold"/>

      </RelativeLayout>


      <com.bb.executemytrip.customview.EmtTextView
        android:id="@+id/tv_route_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_roundedcorner"
        android:textColor="@color/white"
        android:visibility="gone"/>


    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp"
      android:background="@android:color/darker_gray"/>


    <com.bb.executemytrip.customview.EmtTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dp"
      android:text="@string/waytogo"
      android:textAlignment="center"
      android:textStyle="bold"/>

    <!--we can add the recycle view in case of ll_step but in this case no much data , so i use
    Linearlayout-->

    <LinearLayout
      android:id="@+id/ll_Step"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"/>

  </LinearLayout>

</android.support.v7.widget.CardView>